@@ -1,0 +1,9 @@
+use strict;
+use warnings;
+use FindBin;
+use lib "$FindBin::Bin/lib";
+BEGIN { $ENV{SPVM_BUILD_DIR} = "$FindBin::Bin/.spvm_build"; }
+
+use SPVM 'TestCase::Sys::Process';
+
+SPVM::TestCase::Sys::Process->exit_success;
